--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 /* css external */
+/* BODY */
 body {
     /* background-color: burlywood; */
     background-image: url(https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg);
@@ -6,6 +7,8 @@ body {
     padding: 20px;
 }
 
+
+/* TITLE */
 h1, h2{
     font-family: Impact, serif;
 }
@@ -24,6 +27,7 @@ h1, h2, p{
     text-align: center;
 }
 
+/* ITEM */
 .established {
     font-style: italic;
 }
@@ -40,7 +44,7 @@ h1, h2, p{
     padding: 20px;
 }
 
-/* styles all p nested in a tag class item */
+    /* styles all p nested in a tag class item */
 .item p {
     display: inline-block;
     margin-top: 5px;
@@ -48,7 +52,7 @@ h1, h2, p{
     font-size: 18px;
 }
 
-/* Loại bỏ khoảng trống trong mã nguồn HTML(SPACE, ENTER giữa các thẻ p  khi các thẻ p thuộc tính inline-block */
+    /* Loại bỏ khoảng trống trong mã nguồn HTML(SPACE, ENTER giữa các thẻ p  khi các thẻ p thuộc tính inline-block */
 .flavor , .dessert{
     text-align: left;
     width: 75%;
